# home-ops-copilot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
app/: main.py
app/core/: __init__.py  config.py  ssl_setup.py
app/llm/: __init__.py  client.py  tracing.py
app/rag/: __init__.py  extractors.py  ingest.py  models.py  query.py  retriever.py  schema.py
app/workflows/: __init__.py  helpers.py  ics_generator.py  maintenance_planner.py  models.py  parts_helper.py  parts_helper_models.py  troubleshooter.py  troubleshooter_models.py
data/: house_profile.json  metadata.json
docs/: ui-nice-to-have.md  week5-tasks.md
eval/: __init__.py  adversarial_golden.json  golden_questions.jsonl  maintenance_golden.json  parts_golden.json  run_adversarial_eval.py  run_eval.py  run_maintenance_eval.py  run_parts_eval.py  run_troubleshooting_eval.py  troubleshooting_golden.json  week4_baseline.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  ChecklistDisplay.tsx  CitationItem.tsx  CitationList.tsx  ConfidenceBadge.tsx  ContextDrawer.tsx  DiagnosticStepsDisplay.tsx  FollowupQuestions.tsx  HouseProfileEditor.tsx  IntakeForm.tsx  PartsQueryForm.tsx  PartsResultsDisplay.tsx  RiskBadge.tsx  SafetyWarning.tsx  SeasonSelector.tsx  ThemeToggle.tsx
frontend/src/contexts/: ChatContext.tsx  ThemeContext.tsx
frontend/src/pages/: ChatPage.tsx  HomePage.tsx  MaintenancePlanPage.tsx  PartsHelperPage.tsx  TroubleshootPage.tsx
frontend/src/utils/: export.ts
scripts/: check_docs.py  test_retrieval.py
tests/: conftest.py  test_api.py  test_config.py  test_eval_helpers.py  test_eval_metrics.py  test_extractors.py  test_ics_generator.py  test_llm_client.py  test_maintenance_planner.py  test_models.py  test_parts_helper.py  test_placeholder.py  test_query.py  test_retriever.py  test_safety_regression.py  test_tracing.py  test_troubleshooter.py
